--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,9 @@ typings/
 # nuxt.js build output
 .nuxt
 
+# Nuxt output (build)
+.output
+
 # Nuxt generate
 dist
 
@@ -88,3 +91,6 @@ sw.*
 
 # Vim swap files
 *.swp
+
+
+*.data
