--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt dev",
     "build": "nuxt build",
-    "start": "nuxt start",
     "generate": "nuxt generate",
-    "analyze": "nuxt build --analyze"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^1.15.1",
+    "@nuxt/content": "^3.10.0",
+    "@nuxtjs/i18n": "^10.2.1",
+    "@nuxtjs/svg-sprite": "^1.0.2",
     "@tailwindcss/typography": "^0.5.2",
+    "better-sqlite3": "^12.5.0",
     "clipboard": "^2.0.10",
     "core-js": "^3.19.3",
     "devicon": "^2.15.1",
-    "nuxt": "^2.15.8",
+    "nuxt": "^4.2.2",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.27.0",
-    "webpack": "^4.46.0"
+    "vue-i18n": "^11.2.8",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nuxt/image": "^0.6.2",
-    "@nuxt/postcss8": "^1.1.3",
-    "@nuxtjs/svg": "^0.4.0",
+    "@nuxt/image": "^2.0.0",
     "autoprefixer": "^10.4.4",
-    "nuxt-vite": "^0.3.5",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.7.14",
-    "vue-template-compiler": "^2.7.14"
+    "vite-svg-loader": "^5.1.0",
+    "vue": "^3.5.26"
   }
 }
