--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+   "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "@nuxt/content": "^3.10.0",
     "@nuxtjs/i18n": "^10.2.1",
