--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -53,7 +53,9 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Static HTML export with Nuxt
-        run: ${{ steps.detect-package-manager.outputs.manager }} run generate
+        run:  |
+              export NUXT_APP_BASE_URL=/portfolio-guillermo-veron/
+              ${{ steps.detect-package-manager.outputs.manager }} run generate -- --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
