--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt build --preset github_pages"
   },
-   "engines": {
+  "engines": {
     "node": ">=20"
   },
   "dependencies": {
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@nuxt/image": "^2.0.0",
+    "@types/node": "^25.0.6",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
